# tony-money-bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
tony_money_bot/: bot.py  config.py  gsheet.py
